--- a/3_week/hw3Ans.ipynb
+++ b/3_week/hw3Ans.ipynb
@@ -375,6 +375,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Proof of Two Equations\n",
+    "![title](q4Ans.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
